# thunarx-python

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.ac.in  module.xml  thunarx-python-object.c  thunarx-python-object.h  thunarx-python.h  thunarx.defs  thunarx.override
docs/: Makefile.am  documentation.py
docs/examples/: Makefile.am  thunarx-emblem-plugin.py
docs/reference/: Makefile.am  thunarx-python-class-reference.xml  thunarx-python-docs.xml  thunarx-python-file-info.xml  thunarx-python-menu-item.xml  thunarx-python-menu-provider.xml  thunarx-python-menu.xml  thunarx-python-overview-example.xml  thunarx-python-overview.xml  thunarx-python-preferences-provider.xml  thunarx-python-property-page-provider.xml  thunarx-python-property-page.xml  thunarx-python-provider-reference.xml  thunarx-python-ref.xml  thunarx-python-renamer-provider.xml  thunarx-python-renamer.xml
examples/: Makefile  Makefile.am  Makefile.in  README  thunarx-example-plugin.py  thunarx-menu-plugin.py  thunarx-preferences-plugin.py  thunarx-preferences-provider.py  thunarx-property-page-plugin.py  thunarx-renamer-plugin.py  thunarx-submenu-plugin.py
m4/: python.m4
src/: Makefile.am  generate-defs.sh  thunarx-python-object.c  thunarx-python-object.h  thunarx-python.c  thunarx-python.h  thunarx.defs  thunarx.override  thunarxmodule.c  txp-provider.c  txp-provider.h
src/.deps/: thunar_vcs_plugin_la-thunar-vcs-plugin.Plo  thunar_vcs_plugin_la-tvp-provider.Plo
