docsdir = $(datadir)/doc/$(PACKAGE)
docs_DATA = README

examplesdir = $(datadir)/doc/$(PACKAGE)/examples
examples_DATA =					\
	thunarx-preferences-plugin.py			\
	thunarx-renamer-plugin.py			\
	thunarx-menu-plugin.py			\
	thunarx-property-page-plugin.py			\
	thunarx-submenu-plugin.py

EXTRA_DIST = README $(examples_DATA)
